<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Erasmus Events</string>
    <string name="app_id">200155020171205</string>
    <string name="hello_world">Hello world!</string>
    <string name="event_type_sport">Sport</string>

    <!-- action -->
    <string name="action_settings">Settings</string>
    <string name="action_main_account">Account</string>
    <string name="action_main_friends">Friends</string>
    <string name="action_main_logout">Logout</string>

    <!-- title -->
    <string name="title_activity_profile">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_register_confirmation">Register Confirmation</string>
    <string name="title_activity_profile_fragment">Profile</string>


    <!-- Login/Sign up Activity -->
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>
    <string name="login_signup">Click here to register!</string>
    <string name="logout">Log out</string>
    <string name="sign_up">Here you can create an account!</string>
    <string name="welcome">Welcome to ErasmusEvents!</string>
    <string name="addinfo">Thank you for your registration!Do you want to add some Information to your Profile now?</string>
    <string name="enter_info">Please fill in your E-Mail address and a Password.</string>
    <string name="progressBar_message">Please wait</string>


    <!-- Register Activity -->
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_registerNewAccount">Register New Account</string>
    <string name="register_linkToLogin">Already got an account? Login here</string>
    <string name="tab_friends">Friends</string>
    <string name="cancel">Cancel</string>
    <string name="register_confirmation_text">Thank you for your registration.\nYour account has been successfully registered.\nDo you want to modify you profile?</string>
    <string name="register_confirmation_main_button">I will do it later</string>
    <string name="register_confirmation_profile_button">Yes</string>
    <string name="token_not_found_error">Error. Please retry</string>


    <!-- Profile Fragment -->
    <string name="profile_button_text">Edit your profile</string>


    <!-- Calendar Activity -->
    <string name="calendar_title_activity">CalendarActivity</string>
    <string name="calendar_title_activity_view">CalendarView</string>
    <string name="exam_title_view">ExamView</string>
    <string name="calendar_servor_error">The server can\'t be access. You may check your connection</string>
    <string name="calendar_select_date">Select a date</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="calendar_no_detail">There is no event on this day</string>
    <string name="calendar_loading">Loading data...</string>
    <string name="calendar_add_exam">Add an exam</string>
    <string name="title_activity_create_exam">CreateExamActivity</string>
    <string name="exam_name">Name : </string>
    <string name="exam_update">Update</string>
    <string name="exam_delete">Delete</string>
    <string name="exam_delete_error">The exam hasn\'t been deleted, please try later</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Events</item>
        <item>Calendar</item>
        <item>Friends</item>
        <item>Map</item>
        <item>Profile</item>
        <item>Team</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_team">Team</string>

    <!-- TeamFragment Strings -->
    <string name="team_text">Our international Team:</string>

    <!-- Account Strings -->
    <string name="single">Single</string>
    <string name="inRelationship">In a relationship</string>
    <string name="engaged">Engaged</string>
    <string name="married">Married</string>
    <string name="complicated">It\'s complicated</string>
    <string name="openRelationship">In an open relationship</string>
    <string name="separated">Separated</string>
    <string name="divorced">Divorced</string>
    <string name="widowed">Widowed</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="dateOfBirth">Date of Birth:</string>
    <string name="relationshipStatus">Relationship status:</string>
    <string name="homeUniversity">Home University:</string>
    <string name="ErasmusUniversity">Erasmus University:</string>
    <string name="email">Email:</string>
    <string name="disableLocationServices">Disable location services:</string>
    <string name="status">Status:</string>
    <string name="nationality">Nationality:</string>

    <string-array name="members">
        <item>Maela</item>
        <item>Lukas</item>
        <item>Sanaa</item>
        <item>Florian</item>
        <item>Jan</item>
        <item>Timo</item>
        <item>Andreas</item>
    </string-array>

    <!-- Calendar Activity -->
    <string name="title_activity_people_near_you">PeopleNearYou</string>
    <string name="title_activity_map_meetup">Meetup Map</string>
    <string name="map_meetup_your_position">Your position</string>


    <!-- Map Activity -->
    <string name="map_add_friend_title">Add a friend</string>
    <string name="map_question_add_friend">Do you want to add this person to your friends ?</string>
    <string name="map_meetup_events">Events</string>
    <string name="map_meetup_whos_partying">Who\'s partying?</string>
    <string name="map_meetup_friends">Friends</string>
    <string name="map_update_status">Update status</string>
    <string name="map_your_status">Your status</string>
    <string name="map_people_near_you">Near you</string>

    <!-- Friends -->
    <string name="friends_no_name_friend">A friend with no name</string>

    <!-- General Strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="advice_status">You can update your status by clicking on it.</string>
    <string name="welcome_message">\n \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 Welcome to \n \u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020 Erasmus - Events!</string>
    <string name="upcoming_events">Upcoming Erasmus-Events:</string>
    <string name="welcome_smiley">Welcome-Smiley</string>
    <string name="exam_date">Exam Date</string>
    <string name="exam_time">Exam Time</string>
    <string name="exam_notify_date">Notify Date</string>
    <string name="exam_notify_time">Notify Time</string>
    <string name="advice_name_exam_missing">You have to name the exam</string>
    <string name="advice_date_exam_missing">You have to specify a date for the exam</string>
    <string name="advice_time_exam_missing">You have to specify a time for the exam</string>
    <string name="advice_wrong_format">Exam date in wrong format. Should be dd.MM.yyyy HH:mm</string>

    <string-array name="types_arrays">
        <item>Default</item>
        <item>Sport</item>
        <item>Dance</item>
        <item>Trip</item>
    </string-array>

    <string name="advice_events_day">Events for this day:</string>
    <string name="title_activity_loadmap_fragment">LoadmapFragment</string>
    <string name="map_load">...loading map</string>
    <string name="new_text">New Text</string>
    <string name="save">Save</string>
    <string name="create_new_event_doublepoint">Create a new Event :</string>
    <string name="name_of_event">Name of the event</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="date_doublepoint">Begin: </string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="due_date_doublepoint">End: \u0020\u0020</string>
    <string name="save_event">Save Event</string>
    <string name="name">Name</string>
    <string name="location_doublepoint">Location : </string>
    <string name="attendee_doublepoint">Attendee : </string>
    <string name="due">Due</string>
    <string name="type_doublepoint">Type : </string>
    <string name="description_doublepoint">Description : </string>
    <string name="new_event">New event</string>
    <string name="developers">Our international Team of Developers:</string>
    <string name="evant_name">event_name</string>
    <string name="event_location">event_location</string>
    <string name="event_description">Meet at 12:00</string>
    <string name="friends_advice">Here you can see all your friends</string>
    <string name="add_friends">(Friends can be added via Map)</string>
    <string name="no_friends">You dont have any friends! :-( </string>
    <string name="cancel_event">Cancel</string>

</resources>