<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    style="@style/AppThemeBg"
    android:windowSoftInputMode="adjustPan|stateVisible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_event_doublepoint"
        android:layout_marginLeft="15dp"
        android:id="@+id/eventCreatorTextView1"
        android:textColor="#2E2E2E"
        android:textSize="@dimen/abc_action_bar_title_text_size"
        android:layout_marginTop="5dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/name_of_event"
        android:id="@+id/eventCreatorNameTextField" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/location"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/eventCreatorLocationTextField" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:hint="@string/description"
        android:ems="10"
        android:id="@+id/eventCreatorDescription"
        android:layout_weight="0.33"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/types_arrays"
        android:id="@+id/eventCreatorType"
        android:gravity="center"
        android:layout_gravity="center" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_doublepoint"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#2E2E2E"
            android:id="@+id/eventCreatorTextView2"
            android:textSize="@dimen/abc_action_bar_title_text_size" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingTop="4dp"
            android:background="@drawable/button_alternative"
            android:textColor="@android:color/white"
            android:text="@string/set_time"
            android:id="@+id/eventCreatorDateBtnTime" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingTop="4dp"
            android:background="@drawable/button_alternative"
            android:textColor="@android:color/white"
            android:text="@string/set_date"
            android:id="@+id/eventCreatorDateBtnDate" />


    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date_doublepoint"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#2E2E2E"
            android:id="@+id/eventCreatorTextView3"
            android:textSize="@dimen/abc_action_bar_title_text_size" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:background="@drawable/button_alternative"
            android:textColor="@android:color/white"
            android:layout_marginLeft="5dp"
            android:text="@string/set_time"
            android:id="@+id/eventCreatorDueDateBtnTime" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/set_date"
            android:paddingTop="4dp"
            android:background="@drawable/button_alternative"
            android:textColor="@android:color/white"
            android:id="@+id/eventCreatorDueDateBtnDate" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/save_event"
        android:background="@drawable/button_normal"
        android:id="@+id/eventCreatorSaveBtn"
        android:textColor="@android:color/white"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"/>


</LinearLayout>