<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/examName"
        android:layout_weight="1"
        android:hint="Exam Name" />

    <TextView
        android:id="@+id/examDate"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:hint="@string/exam_date"
        android:layout_width="match_parent" />

    <TextView
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/examNotifyDate"
        android:hint="@string/exam_notify_date"
        android:layout_width="match_parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/exam_update"
            android:id="@+id/cancelButton"
            android:background="@drawable/button_normal"
            android:textColor="@android:color/white"
            android:layout_marginRight="30dp" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/exam_delete"
            android:id="@+id/deleteButton"
            android:layout_gravity="right"
            android:background="@drawable/button_normal"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>
