<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:id="@+id/eventDescNameTextView"
        android:textColor="#000066"
        android:textSize="23dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_doublepoint"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textColor="#040404"
        android:id="@+id/eventDescTextView1"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@+id/eventDescNameTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textColor="#040404"
        android:id="@+id/eventDescLocationTextView"
        android:textSize="18dp"
        android:layout_below="@+id/eventDescNameTextView"
        android:layout_toRightOf="@+id/eventDescTextView1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attendee_doublepoint"
        android:id="@+id/eventDescTextView2"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="#343434"
        android:layout_alignTop="@+id/eventDescAttendeeTextView"
        android:layout_toRightOf="@+id/eventDescNameTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nb"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textColor="#040404"
        android:id="@+id/eventDescAttendeeTextView"
        android:textSize="18dp"
        android:layout_below="@+id/eventDescNameTextView"
        android:layout_toRightOf="@+id/eventDescTextView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_doublepoint"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textColor="#040404"
        android:id="@+id/eventDescTextView3"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@+id/eventDescTextView1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VDate"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textColor="#040404"
        android:id="@+id/eventDescDateTextView"
        android:textSize="18dp"
        android:layout_below="@+id/eventDescTextView1"
        android:layout_toRightOf="@+id/eventDescTextView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date_doublepoint"
        android:layout_marginTop="10dp"
        android:textColor="#040404"
        android:id="@+id/eventDescTextView4"
        android:textSize="18dp"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:layout_below="@+id/eventDescTextView3"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_doublepoint"
        android:layout_marginTop="10dp"
        android:textColor="#040404"
        android:id="@+id/eventDescTextView6"
        android:textSize="18dp"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:layout_below="@+id/eventDescTextView4"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="myTYpe"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textColor="#040404"
        android:id="@+id/eventTypeTextView"
        android:textSize="18dp"
        android:layout_below="@+id/eventDescTextView4"
        android:layout_toRightOf="@+id/eventDescTextView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Due"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textColor="#040404"
        android:id="@+id/eventDescDueDateTextView"
        android:textSize="18dp"
        android:layout_below="@+id/eventDescTextView3"
        android:layout_toRightOf="@+id/eventDescTextView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description : "
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textColor="#040404"
        android:id="@+id/eventDescTextView5"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@+id/eventDescTextView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lorem ipsum"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="7dp"
        android:textColor="#040404"
        android:id="@+id/eventDescriptionTextView"
        android:textSize="18dp"
        android:layout_below="@+id/eventDescTextView5" />

</RelativeLayout>