<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adm.meetup.RegisterConfirmationActivity"
    tools:ignore="MergeRootFrame"
    style="@style/AppThemeBg">

    <TextView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:text="@string/addinfo"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button2"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_confirmation_main_button"
            android:id="@+id/register_confirmation_main_button"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_confirmation_profile_button"
            android:id="@+id/register_confirmation_profile_button"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:layout_marginLeft="2dp"
            android:textColor="@android:color/white"
            android:layout_marginRight="10dp" />
    </LinearLayout>
</LinearLayout>
