<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:id="@+id/EventListThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dip"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dp">

        <ImageView
            android:id="@+id/EventImage"
            android:layout_width="50dip"
            android:layout_height="50dip" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evant_name"
            android:layout_marginLeft="5dp"
            android:layout_alignTop="@+id/EventListThumbnail"
            android:layout_toRightOf="@+id/EventListThumbnail"
            android:textColor="#040404"
            android:id="@+id/eventNameTextView"
            android:textSize="@dimen/abc_action_bar_title_text_size"
            android:textStyle="bold" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_location"
            android:layout_marginLeft="5dp"
            android:id="@+id/eventLocationTextView"
            android:layout_marginTop="1dp"
            android:textColor="#343434" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:layout_marginLeft="5dp"
            android:id="@+id/eventAtendeeTextView"
            android:textColor="#454649"
            android:layout_marginTop="1dp"/>



    </LinearLayout>

</LinearLayout>